--- a/ureport/templates/ureport/home.html
+++ b/ureport/templates/ureport/home.html
@@ -1,8 +1,9 @@
 {% extends "ureport_layout.html" %}
 {% load cache %}
 {% load i18n %}
+{% load ureport %}
 {% block javascripts %}
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language={% settings_value "LANGUAGE_CODE" %}"></script>
     <script src="http://openlayers.org/api/2.11-rc1/OpenLayers.js?1123"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/map.js"></script>
     {{ block.super }}
