--- a/ureport/templates/ureport/national_pulse.html
+++ b/ureport/templates/ureport/national_pulse.html
@@ -5,6 +5,7 @@
 {% block stylesheets %}
     {{ block.super }}
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/dc.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/modal.css"/>
     <style>
         .control {
             position: fixed;
@@ -154,6 +155,7 @@
     <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/colorbrewer.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/underscore-min.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/d3.geo.projection.v0.min.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/bootstrap-modal.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -178,7 +180,7 @@
         <div id="ug-chart">
             <h3> {% blocktrans %}Welcome to National Pulse where you can see what is trending within the U-report community.{% endblocktrans %}<br/> {% blocktrans %}Click on your district to see what the young people are talking about where you live.{% endblocktrans %}</h3>
             <a class="reset" href="javascript:ugChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
-            <span class="reset" style="display: none;"> | {% trans "Current filter" %}: <span class="filter"></span></span>
+            <span class="reset" style="display: none;"> | {% trans "Click on on current filter(" %} <a href="javascript:load_cloud_word(this)" class="filter" id="district_filter"></a>{% trans ") to see word cloud" %}</span>
 
             <div class="clearfix"></div>
         </div>
@@ -189,8 +191,32 @@
         </div>
 
     </div>
-
+    <div class="modal fade" id="cloud_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Modal title</h4>
+                </div>
+                <div class="modal-body" id="cloud">
+                    <p>Word Cloud Loading Please Wait...</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
     <script type="text/javascript">
+    function load_cloud_word(element){
+        var district = $('#district_filter').text();
+        console.log("Clicked on: " +district);
+        $('.modal-title').text(district + " {{ period|cut:'/' }}'s Word Cloud");
+        $('#cloud').html("<p>Word Cloud Loading Please Wait...</p>");
+        $('#cloud_modal').modal();
+        $('#cloud').load('/map-cloud/'+ district+'/{{ period|cut:"/" }}');
+
+    }
     var numberFormat = d3.format(".2f");
 
     var ugChart = dc.geoChoroplethChart("#ug-chart");
@@ -234,7 +260,6 @@
         return key;
     }
 
-    $('#loading').show();
     queue()
             .defer(d3.json, "{{ MEDIA_URL }}ureport/data/districts.json")
             {% if period %}
@@ -243,7 +268,6 @@
                 .defer(d3.json, "{% url pulse_json %}")
             {% endif %}
             .await(ready);
-    $('#loading').hide();
 
     function ready(error, ug, category) {
         // TODO handle error!
