[Felix, nim] Internationalising mypolls page

--- a/ureport/templates/ureport/partials/polls/poll_admin_row.html
+++ b/ureport/templates/ureport/partials/polls/poll_admin_row.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <td>
     {{ object.name }}
 </td>
@@ -5,7 +6,7 @@
     {{ object.question }}
 </td>
 <td>{% if object.start_date %}{{ object.start_date|date:"d/m/Y" }}{% endif %}</td>
-<td>{% if object.end_date %}{{ object.end_date|date:"d/m/Y" }}{% else %}Open{% endif %}</td>
+<td>{% if object.end_date %}{{ object.end_date|date:"d/m/Y" }}{% else %}{% trans "Open" %}{% endif %}</td>
 <td style="white-space:nowrap;width:25em">
     <a style="float:right;padding-top:7px;" href="javascript:void(0);" onclick="deletePoll(this, '{% url poll.views.delete_poll object.pk %}','{{object.question|addslashes}}');"><img border="0" src="{{ MEDIA_URL }}rapidsms/icons/silk/delete.png"/></a>
     <div class="buttons">
@@ -18,7 +19,7 @@
             </a>
         {% endif %}
         <a href="{% url ureport.views.view_poll object.pk %}">
-            <img src="{{ MEDIA_URL }}poll/icons/silk/bullet_wrench.png" alt=""/> Edit
+            <img src="{{ MEDIA_URL }}poll/icons/silk/bullet_wrench.png" alt=""/> {% trans "Edit" %}
         </a>
     </div>
 <td>
