--- a/ureport/templates/ureport/poll_admin_base.html
+++ b/ureport/templates/ureport/poll_admin_base.html
@@ -1,4 +1,6 @@
 {% extends "generic/base.html" %}
+{% load i18n %}
+
 {% block title %}
     Polls - {{ block.super }}
 {% endblock %}
@@ -30,7 +32,7 @@
 </div>
 <div class="buttons"> 
     <a href="{% url ureport.views.new_poll %}" style="float:left">
-      <img border="0" src="/static/rapidsms/icons/silk/add.png" alt=""/>Add New Poll
+      <img border="0" src="/static/rapidsms/icons/silk/add.png" alt=""/> {%  trans "Add New Poll" %}
     </a>
     {% if results_title == 'Polls' %}
 <a href="{% url script-polls %}" style="float:right" class="">View AutoReg Polls</a>
