--- a/ureport/templates/ureport/polls/view_category.html
+++ b/ureport/templates/ureport/polls/view_category.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <td class="category_name_col">
     {{ category.name }}
 </td>
@@ -12,12 +13,12 @@
     {% endif %}
 </td>
         <td>
-            <a href="javascript:void(0)" onclick="ajax_loading(this);$('#view_rules').load('/category/{{category.pk}}/rules/view/',function() { $('.ajax_loading').remove();$('#view_rules').show();$('#view_rules').effect('highlight', {}, 3000);});" class="btn">View Rules</a>
+            <a href="javascript:void(0)" onclick="ajax_loading(this);$('#view_rules').load('/category/{{category.pk}}/rules/view/',function() { $('.ajax_loading').remove();$('#view_rules').show();$('#view_rules').effect('highlight', {}, 3000);});" class="btn">{% trans "View Rules" %}</a>
         </td>
         <td>
-            <a href="javascript:void(0)" onclick="ajax_loading(this);$('#edit_category').load('/category/{{category.pk}}/edit/',function() { $('.ajax_loading').remove();$('#edit_category').show();$('#edit_category').effect('highlight', {}, 3000);});" class="btn">Edit</a>
+            <a href="javascript:void(0)" onclick="ajax_loading(this);$('#edit_category').load('/category/{{category.pk}}/edit/',function() { $('.ajax_loading').remove();$('#edit_category').show();$('#edit_category').effect('highlight', {}, 3000);});" class="btn">{% trans "Edit" %}</a>
         </td>
         <td>
-            <a  href="/category/{{category.pk}}/delete/" onclick="$(this).parent().parent().hide()" data-remote=true>Delete</a>
+            <a  href="/category/{{category.pk}}/delete/" onclick="$(this).parent().parent().hide()" data-remote=true>{% trans "Delete" %}</a>
         </td>
 
