no caching realtime page

--- a/ureport/templates/ureport/national_pulse.html
+++ b/ureport/templates/ureport/national_pulse.html
@@ -187,7 +187,7 @@
 
         <div id="national-pie-chart" class="donut control">
             <a class="reset" href="javascript:nationalPieChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
-
+            <span class="reset" style="display: none;"> | {% trans "Click on on current filter(" %} <a href="javascript:load_cloud_word(this)" class="filter" id="district_filter"></a>{% trans ") to see word cloud" %}</span>
         </div>
 
     </div>
